# eva-companion

./: .gitignore  AGENTS.md  CLAUDE.md  DEMO_SCRIPT.md  EVA_DEMO_IMPLEMENTATION_PLAN.md  EVA_MEMORY_ARCHITECTURE.md  EVA_SYSTEM_DESIGN.md  README.md  dev.ps1  dev.sh  eva_system.md  notes.txt  run_demo.sh  run_phase14.sh  setup.sh
.claude/: launch.json
backend/: app.py  net_guard.py  requirements-voice.txt  requirements.txt  scheduler.py  settings.py
backend/engine/: __init__.py  turn.py
backend/eval/: __init__.py  run.py  trace.py
backend/ingest/: __init__.py  chunker.py  corpus.py  (+1 more)
docs/: AUDIT.md  CHANGES.md  DIAGRAMS.md  EVAL_HARNESS_DESIGN.md  EVA_MEMORY_ARCHITECTURE.md  EVA_SYSTEM_DESIGN.md  IMPLEMENTATION_PLAN_V2.md  V2_CODEBASE_REALIGNMENT_PLAN.md
packaging/: CLEAN_MACHINE_CHECKLIST.md  build_macos.sh
scripts/: backfill_entry_uids.py  check_net_guard.py  demo_drills.py  demo_reset.py  download_embed_model.py  download_kokoro_model.py  download_model.py  download_model_mac.sh  download_whisper_model.py  extract_prompt_report_temp0.3.md  extract_prompt_report_temp1.0.md  query_corpus.py  rebuild_profile.py  reextract.py  reindex.py  run_model_mac.sh  seed_demo.py  seed_john.py  seed_profile.py  seed_yusuf.py  setup_windows.ps1  test_extract_prompt.py  try_eva.py  validate_graph.py  verify_rag.py  verify_stepB_e2e.py  ws_test.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: lib.rs  main.rs
(+144 files in other folders)
