[package]
name = "eva"
version = "0.0.0"
description = "Eva — offline desktop journaling companion (Tauri shell)"
edition = "2021"
rust-version = "1.77.2"

# The library half of the app; main.rs is a thin binary that calls into it.
# This split is the Tauri 2 convention and is what enables mobile targets later.
[lib]
name = "eva_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used by the production build to enable Tauri's custom-protocol
# asset serving. It is automatically set by `tauri build`.
custom-protocol = ["tauri/custom-protocol"]
